modified:   .gitignore 	modified:   README.md 	new file:   save_model/LightGCN-Base-ciao_final.pt 	new file:   save_model/LightGCN-PARA-ciao_final.pt 	new file:   save_model/MF-Base-ciao_final.pt 	new file:   save_model/MF-PARA-ciao_final.pt 	modified:   src/data_processing.py

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ data/Douban/*
 data/LightGCN_graph/*
 data/ml-1m/*
 data/RunningExample/*
-save_model/*.pt
+# save_model/*.pt
+save_model/*_temp.pt
 *.exe
 
 # Generate by GitHub
