modified:   .gitignore 	new file:   data/ml-1m/README 	new file:   data/ml-1m/movies.dat 	new file:   data/ml-1m/ratings.dat 	new file:   data/ml-1m/ratings.extend 	new file:   data/ml-1m/ratings.test 	new file:   data/ml-1m/ratings.train 	new file:   data/ml-1m/ratings.valid 	new file:   data/ml-1m/users.dat

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 # data/Ciao/*
 data/Douban/*
 data/LightGCN_graph/*
-data/ml-1m/*
+# data/ml-1m/*
 data/RunningExample/*
 # save_model/*.pt
 save_model/*_temp.pt
